Bug 1247751 - [devtools] Add InspectorUtils.getRuleIndex. r=emilio,devtools-reviewers,ochameau.

Differential Revision: https://phabricator.services.mozilla.com/D201383